deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beacon
spec:
  selector:
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8080
      targetPort: http
