deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: beacon
spec:
  to:
    kind: Service
    name: beacon
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
